[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roadprofile"
version = "1.0.0"
description = "ISO 8608 road profile generator in Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/wanglongqi/RoadProfile"
Repository = "https://github.com/wanglongqi/RoadProfile"

[tool.hatch.build.targets.wheel]
packages = ["src/roadprofile"]
